# openpose_ros

./: README.md
openpose/: CMakeLists.txt  package.xml
openpose_examples/: CMakeLists.txt  package.xml
openpose_examples/scripts/: GetPostureFromImage.py  RosOpenPoseServiceExample.py
openpose_msgs/: CMakeLists.txt  package.xml
openpose_node/: CMakeLists.txt  package.xml
openpose_node/launch/: openpose.launch  serviceReadyTest.launch  videostream.launch  videostream_ip_cam.launch
openpose_node/src/: openpose_ros_node.cpp
openpose_ros_examples/scripts/: RosOpenPoseServiceExample.py
openpose_ros_msgs/: CMakeLists.txt  package.xml
openpose_ros_msgs/msg/: PersonsImgPose.msg
openpose_ros_node/: CMakeLists.txt  package.xml
openpose_ros_node/launch/: openpose.launch  serviceReadyTest.launch  videostream.launch  videostream_ip_cam.launch
openpose_ros_node/src/: openpose_ros_node.cpp
openpose_srvs/: CMakeLists.txt  package.xml
openpose_srvs/srv/: DetectPeoplePoseFromImg.srv
