<?xml version="1.0"?>
<package>
  <name>openpose_examples</name>
  <version>0.1.0</version>
  <description>ROS Services Package for CMU's Openpose</description>

  <maintainer email="jsaraydaryan@cpe.fr">Jacques Saraydaryan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>openpose_srvs</build_depend>

  

<build_depend>openpose_msgs</build_depend>
  

  <run_depend>openpose_srvs</run_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>openpose_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
